# VolcanoAPI

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yaml  pyproject.toml
.dockervenv/: pyvenv.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  volcano_issue.md
.github/workflows/: aws_lambda_deploy.yaml
alembic/: env.py
alembic/versions/: 0a0d512a0ea1_fix_column.py  5386bd267e20_init_tables.py  5b3b31e9b5c6_create_tables.py  a4ac5c6d5d47_remove_nullable.py  b97cd23dca66_change_types.py
aws_lambda_dependencies/PyYAML-6.0.1.dist-info/: RECORD
aws_lambda_dependencies/SQLAlchemy-2.0.29.dist-info/: RECORD
aws_lambda_dependencies/greenlet-3.0.3.dist-info/: RECORD
aws_lambda_dependencies/mangum-0.11.0.dist-info/: RECORD
aws_lambda_dependencies/pip-24.0.dist-info/: RECORD
aws_lambda_dependencies/psycopg2-2.9.9.dist-info/: RECORD
aws_lambda_dependencies/pydantic-1.10.15.dist-info/: RECORD
aws_lambda_dependencies/setuptools-69.5.1.dist-info/: RECORD
aws_lambda_dependencies/uvicorn-0.29.0.dist-info/: RECORD
aws_lambda_dependencies/watchfiles-0.21.0.dist-info/: RECORD
volcano/: main.py
volcano/api/v1/: routes.py
volcano/core/: auth_exception.py  config.py  database.py
volcano/domain/entity/: goal_info.py  goal_percentage.py  read_todo.py  todo.py  type_color_code.py  user.py  user_info.py
volcano/domain/repository/: auth.py  todo.py  type_color_code.py  user.py
volcano/infrastructure/postgresql/: database.py
volcano/model/: base_model.py  todo_model.py  volcano_user_model.py
volcano/repository/: base_repository.py
volcano/schema/: base_schema.py
volcano/service/: base_service.py
volcano/use_case/: __init__.py  auth.py  todo.py  type_color_code.py  user.py
volcano/use_case/model/: auth.py  (+2 more)
(+24 files in other folders)
