[tool.poetry]
name = "volcano-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.99.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
mangum = "0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
