[tool.poetry]
name = "volcano-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.99.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
mangum = "0.11.0"
python-dotenv = "^1.0.1"
sqlalchemy = "2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
